# guarDrone

./: .gitignore  .gitmodules  README.md  init_drone.sh  init_multi.sh  run_cnt.sh  run_multi_cnt.sh  run_px4_cnt.sh
PX4-Autopilot/ROMFS/px4fmu_common/init.d-posix/airframes/: 4001_gz_x500
PX4-Autopilot/Tools/simulation/gz/worlds/: peg_hole.sdf
docker/: build_with_updates.sh  px4_humble_dockerfile-gazebo-classic.txt  px4_humble_dockerfile.txt  px4_humble_harmonic_dockerfile.txt  px4_humble_harmonic_dockerfile_gcs.txt  px4_humble_harmonic_dockerfile_guardrone.txt  px4_humble_harmonic_dockerfile_interaction_drone.txt  run_gcs_cnt.sh  run_guardrone_cnt.sh  run_px4_cnt.sh
my_ros2_ws/: quadrotor_ode_ocp.json
my_ros2_ws/.devcontainer/: .devcontainer.json
my_ros2_ws/SimulationScripts/: guida.md  lee_controller.cpp  lee_controller.h  main.cpp  my_sim.yaml  run_guardrone_onboard.sh  run_multidrone_hw.sh  run_multidrone_sim.sh  run_my_sim.sh  run_my_sim_haptic.sh  tmux.conf
my_ros2_ws/c_generated_code/: Makefile  acados_sim_solver_quadrotor_ode.c  acados_sim_solver_quadrotor_ode.h  acados_solver.pxd  acados_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.h  main_quadrotor_ode.c  main_sim_quadrotor_ode.c
my_ros2_ws/c_generated_code/quadrotor_ode_constraints/: quadrotor_ode_constr_h_fun.c  quadrotor_ode_constr_h_fun_jac_uxt_zt.c  quadrotor_ode_constraints.h
my_ros2_ws/c_generated_code/quadrotor_ode_cost/: quadrotor_ode_cost.h  quadrotor_ode_cost_y_0_fun.c  quadrotor_ode_cost_y_0_fun_jac_ut_xt.c  quadrotor_ode_cost_y_0_hess.c  quadrotor_ode_cost_y_e_fun.c  quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_hess.c  quadrotor_ode_cost_y_fun.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c  quadrotor_ode_cost_y_hess.c
my_ros2_ws/c_generated_code/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c  quadrotor_ode_expl_vde_forw.c  quadrotor_ode_model.h
my_ros2_ws/src/: README.md
my_ros2_ws/src/dop_drones_take_off/: CMakeLists.txt  package.xml
my_ros2_ws/src/dop_drones_take_off/include/: UtilitiesDrones.cpp  UtilitiesDrones.hpp  cbf.cpp  cbf.hpp  cbf_action.hpp  run_mpc_action.hpp  takeoff_action.hpp
my_ros2_ws/src/dop_drones_take_off/src/: bt_executor.cpp  drone_bt.xml  offboard_control_velocita_takeoff.cpp  take_off.cpp
my_ros2_ws/src/drone_mpc_pkg/: CMakeLists.txt  guida.md  package.xml
my_ros2_ws/src/drone_mpc_pkg/config/: bridge.yaml  bridge_interaction.yaml
my_ros2_ws/src/drone_mpc_pkg/drone_mpc_pkg/: MPC_planner_node.py  PID_controller.py  common.py  drone_MPC_settings.py  drone_model.py  geometric_controller.py  human_goal_node.py  logger.py  momentum_based_estimator.py  offboard_admittance_planner.py  offboard_trajectory_planner.py  peg_planner_node.py  planner.py  plot_script.py  prova.py  supervisor.py  teleop_peg.py
my_ros2_ws/src/drone_mpc_pkg/launch/: haptic_mpc.launch.py  haptic_simulation.launch.py  mpc_sim.launch.py  simulation.launch.py
my_ros2_ws/src/fd_haptic_joy/: CMakeLists.txt
my_ros2_ws/src/fd_haptic_joy/src/: fd_haptic_joy_node.cpp
my_ros2_ws/src/forcedimension_ros2/fd_controllers/ee_pose_broadcaster/: CMakeLists.txt
my_ros2_ws/src/forcedimension_ros2/fd_description/config/: fd_controllers.yaml
my_ros2_ws/src/forcedimension_ros2/fd_description/ros2_control/: fd.r2c_hardware.xacro
my_ros2_ws/src/forcedimension_ros2/fd_haptic_joy/: package.xml
my_ros2_ws/src/forcedimension_ros2/fd_haptic_joy/src/: fd_haptic_joy_node.cpp
my_ros2_ws/src/forcedimension_ros2/fd_hardware/: CMakeLists.txt
my_ros2_ws/src/forcedimension_ros2/fd_hardware/src/: fd_effort_hi.cpp
my_ros2_ws/src/gcs_pkg/: CMakeLists.txt  package.xml
my_ros2_ws/src/gcs_pkg/gcs_pkg/: PX4_odom_publisher.py  cyclonedds_config.xml  fake_publisher.py  keyboard_client.py  logger.py  plot_script.py  supervisor.py
my_ros2_ws/src/gcs_pkg/launch/: gcs_hw.launch.py  gcs_sim.launch.py
my_ros2_ws/src/guadrone_pkg/guardrone_pkg/: MPC_planner_node.py  drone_MPC_settings.py  drone_model.py
my_ros2_ws/src/guadrone_pkg/launch/: guardrone_sim.launch.py
my_ros2_ws/src/guardrone_pkg/: CMakeLists.txt  package.xml
my_ros2_ws/src/guardrone_pkg/config/: bridge.yaml  drone_parameters_hw.yaml  drone_parameters_sim.yaml  mpc_weights.yaml  rviz_config_file.rviz
my_ros2_ws/src/guardrone_pkg/guardrone_pkg/: MPC_planner_node.py  drone_MPC_settings.py  fake_publisher.py  offboard_trajectory_planner.py
my_ros2_ws/src/guardrone_pkg/launch/: guardrone_hw.launch.py  guardrone_sim.launch.py
my_ros2_ws/src/gz_env_pkg/: CMakeLists.txt  package.xml
my_ros2_ws/src/gz_env_pkg/config/: bridge.yaml  rviz_config_file.rviz
my_ros2_ws/src/gz_env_pkg/launch/: px4_gz.launch.py
my_ros2_ws/src/gz_env_pkg/models/peg/: model.config  model.sdf
my_ros2_ws/src/gz_env_pkg/models/peg_drone/: model.config  model.sdf
my_ros2_ws/src/gz_env_pkg/src/: peg_pose_gz_plugin.cpp
my_ros2_ws/src/haptic_device/fd_haptic_joy/: CMakeLists.txt
my_ros2_ws/src/haptic_device/fd_haptic_joy/launch/: haptic_sim.launch.py
my_ros2_ws/src/haptic_device/fd_haptic_joy/src/: fd_haptic_joy_node.cpp
my_ros2_ws/src/haptic_device/forcedimension_ros2/fd_bringup/: CMakeLists.txt
my_ros2_ws/src/haptic_device/forcedimension_ros2/fd_controllers/fd_clutch_broadcaster/: CMakeLists.txt
my_ros2_ws/src/haptic_device/forcedimension_ros2/fd_controllers/fd_inertia_broadcaster/: CMakeLists.txt
my_ros2_ws/src/haptic_device/forcedimension_ros2/fd_description/: CMakeLists.txt
my_ros2_ws/src/interaction_drone_pkg/: CMakeLists.txt  package.xml
my_ros2_ws/src/interaction_drone_pkg/interaction_drone_pkg/: offboard_admittance_planner.py
my_ros2_ws/src/interaction_drone_pkg/launch/: interaction_drone_sim.launch.py
my_ros2_ws/src/utils_pkg/: CMakeLists.txt  package.xml
my_ros2_ws/src/utils_pkg/utils_pkg/: PX4_model_parser.py  momentum_based_estimator.py  utils_np.py
ros2_ws-src/pkg/babyk_drone_manager/: .gitignore  README.md
ros2_ws-src/pkg/drone_odometry/: README.md
ros2_ws-src/pkg/path_planner/: README.md
ros2_ws-src/pkg/teleop_node/: README.md
ros2_ws-src/pkg/traj_interp/: README.md
(+3 files in other folders)
